# iot-abe

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm  Gopkg.toml  Makefile  README.md  config.yml.dist  gas_report_test.go  main.go
analysis/: .gitignore  Analysis-Encryption runtime.ipynb  Analysis-SKKeylength.ipynb  Gas.ipynb  README.md
analysis/data/: benchdecpollen_noaes.csv  benchencpollen.csv  benchencpollen_noaes.csv  benchsklength.csv  enc_keylen.csv  gas.csv  keylen.csv  test_gas_3.json  test_gas_6.json  test_gas_9.json  test_gas_policy_3.json  test_gas_policy_6.json  test_gas_policy_9.json
cmd/: clientCmd.go  devicesCmd.go  grantCmd.go  requestCmd.go  rootCmd.go  serverCmd.go  versionCmd.go  walletCmd.go
contract/: Makefile  package.json  truffle-config.js
contract/contracts/: AccessControl.sol
contract/test/: accesscontrol.js
pkg/acc/: manager.go  manager_test.go  rpc_mock.go  wallet_mock.go
pkg/cctv/: client.go  server.go  server_test.go
pkg/contract/: contract.go
pkg/core/: config.go  constants.go
pkg/crypto/: Makefile.arm  Makefile.linux  PERF.md  README.md  abe.go  abe_perf_test.go  abe_test.go  common.c  policy_lang.c  policy_lang.y.linux
pkg/crypto/libbswabe/: AUTHORS  Makefile  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  bswabe.h  config.status  configure  configure.ac  core.c  misc.c  private.h
pkg/rpc/: eth.go
pkg/utils/: crypto.go  crypto_test.go  errors.go  http.go  http_client.go  http_client_test.go  http_test.go  strings.go  tracing.go  urlbuilder.go  urlbuilder_test.go
pkg/wallet/: prompt.go  wallet.go
(+8 files in other folders)
